--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,10 @@
 image: Ubuntu1804
 stack: 12
 branches:
-  only:
-    master
+  only: main
 cache: node_modules
 install:
   - npm install
 build: off
 test_script:
-  - npm run lint && npm run test
+  - npm run lint && npm run test  
