--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,10 +1,20 @@
-image: Ubuntu1804
-stack: 12
+environment:
+  nodejs_version: "18"
+
 branches:
-  only: master
-cache: node_modules
+  only:
+    - master  # ветка git
+    - main
+
+cache: node_modules  # кеширование
+
 install:
-  - npm install
-build: off
+  - npm install  # команда установки зависимостей
+
+build: off  # отключаем встроенную в appveyor систему сборки
+
+build_script:
+  - npm run build   # команда сборки
+
 test_script:
-  - npm run lint && npm run test  
+  - npm run lint && npm test  # скрипт тестирования
