--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "@babel/preset-env": "^7.23.9",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "jest": "^29.7.0",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "core-js": "^3.35.1",
